--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -26,13 +28,53 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p id="currentDay" class="lead"> Here goes the current date </p>
     </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
-    </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <main class="container time-block">
+      <!-- Timeblocks go here -->
+      <div class="hr-seg row">
+
+        <div class="seg-time col-4 d-flex justify-content-center align-items-center">
+          <p>here goes the time</p>
+        </div>
+
+        <div class="seg-input col-4 d-flex justify-content-center align-items-center">
+          <p>Here is the editable field</p>
+        </div>
+
+        <div class="seg-save col-4">
+          <p>
+            <button class="saveBtn">
+              <i>
+                <span class="oi oi-lock-locked d-flex justify-content-center align-items-center">
+                </span>
+              </i>
+            </button>
+          </p>
+          <!--
+          <p>
+            <button class="saveBtn">
+              <i>
+                <span class="oi oi-lock-unlocked d-flex justify-content-center align-items-center">
+               </span>
+              </i>
+            </button>
+          </p>
+          -->
+        </div>
+
+
+      </div>
+
+    </main>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
