--- a/index.html
+++ b/index.html
@@ -32,35 +32,8 @@
     </header>
 
     <main id="main-container" class="container time-block">
-      <!-- Timeblocks go here 
-      <div class="hr-seg row">
+      <!-- Timeblocks go here -->
 
-        <div id="hr-time" class="seg-time col-4 d-flex justify-content-center align-items-center">
-        </div>
-
-        <div id="hr-input" class="seg-input col-4 d-flex justify-content-center align-items-center">
-          <p>Here is the editable field</p>
-        </div>
-
-        <div id="hr-save" class="seg-save col-4">
-          <p>
-            <button class="saveBtn">
-              <i>
-                <span class="oi oi-lock-locked d-flex justify-content-center align-items-center">
-                </span>
-              </i>
-            </button>
-          </p>-->
-          <!--
-          <p>
-            <button class="saveBtn">
-              <i>
-                <span class="oi oi-lock-unlocked d-flex justify-content-center align-items-center">
-               </span>
-              </i>
-            </button>
-          </p>
-          -->
         </div>
 
 
